--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "name": "bem-component-lib",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "node-sass": "^4.9.4",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "sass": "node-sass -w src/scss/ -o src/css/"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -21,5 +23,10 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "description": "Component library using BEM style methodology.",
+  "main": "index.js",
+  "devDependencies": {},
+  "author": "Frankie DeNell",
+  "license": "ISC"
 }
