--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "node-sass": "^4.9.4",
+    "node-sass": "^4.10.0",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-router": "^4.3.1",
@@ -13,7 +13,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "sass": "node-sass -w src/scss/ -o src/css/"
+    "sass": "node-sass -w src/sass/ -o src/css/"
   },
   "eslintConfig": {
     "extends": "react-app"
